<resources>
    <string name="app_name">Asbir EduGames</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="player_default">Guest</string>
    <string name="start_game">Start Game</string>
    <string name="lets_play">Let\'s Play!</string>
    <string name="top_scores">Top Scores</string>
    <string name="settings">Settings</string>
    <string name="difficulty_information">Difficulty: %s</string>
    <string name="dialog_ok">Ok</string>

    <string name="game_completed">All Questions Completed</string>
    <string name="time_is_up">Time is Up!</string>
    <string name="game_progression">Question %d out of %d</string>
    <string name="score_status">Score: %d/%d</string>
    <string name="timer_default">00:00:00</string>


    <string name="name_label">Your Name</string>
    <string name="name_too_short">Your name is too short!</string>
    <string name="questions_label">Number of Questions</string>
    <string name="name_hint">John Doe</string>
    <string name="audio_enabled">Audio</string>
    <string name="game_duration">Game Duration: %.0f secs</string>
    <string name="difficulty">Difficulty</string>
    <string name="done">Done</string>

    <string name="twitter_score">I scored %d out of %d in Asbir Edu App! Try out yourself by downloading the app.</string>
    <string name="twitter_error_auth">Unable to post tweet because the App Key cannot be found</string>
    <string name="twitter_error">Unable to post tweet due to some error</string>
</resources>